syntax = "proto3";

option go_package = "github.com/richardjaytea/infipic/proto/chat";

package chat;

import "google/protobuf/empty.proto";

service Chat {
  rpc ConnectChat(google.protobuf.Empty) returns (Client) {}
  rpc GetMessages(Client) returns (stream MessageResponse) {}
  rpc SendMessage(MessageRequest) returns (google.protobuf.Empty) {}
}

message Client {
  string id = 1;
}

message MessageRequest {
  string id = 1;
  string content = 2;
}

message MessageResponse {
  string id = 1;
  string content = 2;
  string timestamp = 3;
}